[package]
name = "mapd"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eyre = "0.6.12"
tracing = "0.1.41"

leptos = { version = "0.8.2", features = ["tracing"], default-features = false }
leptos_meta = "0.8.2"
leptos_router = "0.8.2"
leptos-leaflet = "0.10.0"

# SSR
leptos_axum = {optional = true, version = "0.8.2"}
tokio = { optional = true, version = "1.46.1", features = ["macros", "rt-multi-thread"] }
axum = { optional = true, version = "0.8.4"}

clap = { optional = true, version = "4.5.40", features = ["derive"] }

tracing-subscriber = { optional = true, version = "0.3.19", features = ["env-filter"] }

# UI
wasm-bindgen = "0.2.100" 

log = { optional = true, version ="0.4.27" }
console_log = { optional = true, version ="1.0.0"}
console_error_panic_hook = { optional = true, version ="0.1.7" }

[features]
hydrate = [
    "leptos/hydrate",
    "leptos-leaflet/hydrate",
    "dep:log",
    "dep:console_log",
    "dep:console_error_panic_hook",
]
ssr = [
    "leptos/ssr",
    "leptos-leaflet/ssr",
    "dep:leptos_axum",
    "dep:tokio",
    "dep:axum",
    "dep:clap",
    "dep:tracing-subscriber",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]

# The site root folder is where cargo-leptos generate all output.
# WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
# site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
# style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
# assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"

