[package]
name = "mapd-ui"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
serde.workspace = true

leptos.workspace = true
leptos_meta = "0.8.2"
leptos_router = "0.8.2"
leptos-leaflet = "0.10.0"

reqwest = { version = "0.12.22", default-features = false, features = ["json"] }

log = { optional = true, version = "0.4.27" }
console_log = { optional = true, version = "1.0.0" }
console_error_panic_hook = { optional = true, version = "0.1.7" }

[features]
ssr = []
hydrate = [
  "leptos/hydrate",
  "leptos-leaflet/hydrate",
  "dep:log",
  "dep:console_log",
  "dep:console_error_panic_hook",
]

